--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "check-prop-types": "^1.1.2",
     "css-loader": "^0.28.11",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -39,6 +40,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
-    "ajv": "^6.5.3"
+    "ajv": "^6.5.3",
+    "prop-types": "^15.6.2"
   }
 }
