hooked up redux

--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   },
   "dependencies": {
     "ajv": "^6.5.3",
-    "prop-types": "^15.6.2"
+    "prop-types": "^15.6.2",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1"
   }
 }
