--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "ajv": "^6.5.3",
     "axios": "^0.18.0",
     "prop-types": "^15.6.2",
+    "react-bulma-components": "^2.3.0",
     "react-redux": "^5.1.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
