--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "jest": "^22.4.4",
     "jest-enzyme": "^6.0.4",
     "moxios": "^0.4.0",
+    "node-sass": "^4.10.0",
     "npm": "^6.4.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.2",
     "react-hot-loader": "^4.3.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
+    "webpack": "^4.27.1",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.10"
   },
